--- a/.github/workflows/model_evaluation.yaml
+++ b/.github/workflows/model_evaluation.yaml
@@ -1,4 +1,3 @@
- 
 name: model-training
 on: [push]
 jobs:
@@ -12,3 +11,8 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          pip install -r requirements.txt
+          python wine_linear_regression_test.py
+          cat metrics.txt
+          cat metrics.txt >> report.md
+          cml-send-comment report.md
